# FastAPI

./: directory_tree.PY  directory_tree.txt  fastagcleaner.ipynb  project_tree.txt  test.py
client/: .gitignore
client/Components/: Sidebar.css  Sidebar.js
client/DataCleaner/: Datacleaner.css  Datacleaner.html
client/GPSCorner/: gps_corner.css  gps_corner.html
client/HomePage/: homepage.css  homepage.html
client/LocalityCorner/: Localitycorner.css  Localitycorner.html  Localitycorner.js
client/LoginPage/: login.css  login.html
client/OperationManager/: operation_manager.css  operation_manager.html  processed_db_mock.csv
client/Sidebar/: Sidebar.html
server/: admin.py  auth.py  cleaner.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  secrets.json  test.db
server/api/: cleaner_api.py  download_api.py  gps_api.py  locality_api.py  page_route_api.py
server/cleaner/: cleaner_helper.py  fastag_data_cleaner.py  global_helper.py  mis_data_cleaner.py  operation_data_cleaner.py
server/utils/: helpers.py
