[project]
name = "p_fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "sqladmin>=0.22.0",
    "sqlmodel>=0.0.30",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]
